--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "history": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-map-gl": "^4.1.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "shards-react": "^1.0.3"
